hard-gists/5022297/run.log
=== Docker Run Log for 5022297 ===
Started at: Mi 29. Okt 15:19:05 CET 2025

[2025-10-29 15:19:05] START: Running container for 5022297
[2025-10-29 15:19:05] SUCCESS: Container a52fd18ee0330010af031eee28ee5e4cd6fa53c44c1dbb1be145d4ff69cd7b89 started for 5022297
=== Container logs for 5022297 ===
  File "/snippet.py", line 57
    print 'setting servo to:', rot
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5022297 ===
[2025-10-29 15:19:07] INFO: Container a52fd18ee0330010af031eee28ee5e4cd6fa53c44c1dbb1be145d4ff69cd7b89 has stopped
